src/index.css
* {
  -webkit-appearance: none;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  font-family: 'Open Sans', sans-serif;
  text-align: center;
}

body {
  margin: 0;
  padding: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  height: 80vh;
  overflow: hidden;
  background: #f9fbfc;
}

button {
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.main {
  padding-top: 30px;
}

.headerIcon {
  font-size: 46px;
  border: none;
  background: none;
  outline: none;
}

.activeWindow {
  display: grid;
  height: 40vh;
  justify-content: center;
  align-content: center;
  grid-row-gap: 20px;
  grid-auto-rows: 1fr;
  padding-top: 40px;
}

 .btn {
   font-size: 24px;
   border-radius: 5px;
   background: #eff3f7;
 }

 .btn:focus, active  {
  outline:none;
}

.start {
  background-image: linear-gradient(#a4c18f, #c7eaad, #a4c18f);
}

.reset {
  background-image: linear-gradient(#c18f8f, #eaadad, #c18f8f);
}

.number {
  font-size: 70px;
}

